kubernetes/etcd-backup-test-pod.yaml

---
apiVersion: v1
kind: Pod
metadata:
  name: etcd-backup-test-pod
  namespace: kube-system
spec:
  hostNetwork: true
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchLabels:
              component: etcd
          namespaces:
            - kube-system
          topologyKey: "kubernetes.io/hostname"
  containers:
    - name: etcdctl
      image: anonoz/etcdctl-arm64:3.4.13
      command:
        - "/bin/sh"
      args:
        - "-c"
        - "while true; do echo hello; sleep 10;done"
      volumeMounts:
        - name: etcd-certs
          mountPath: /etc/kubernetes/pki
        - name: etcd-snapshots
          mountPath: /tmp/etcd-snapshots
  volumes:
    - name: etcd-certs
      hostPath:
        path: /etc/kubernetes/pki
    - name: etcd-snapshots
      hostPath:
        path: /tmp/etcd-snapshots
        type: DirectoryOrCreate
  tolerations:
    - key: "node.kubernetes.io/unschedulable"
      operator: "Exists"
      effect: "NoSchedule"
