kubernetes/sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fyp-sidekiq
  labels:
    app: fyp-sidekiq
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fyp-sidekiq
  template:
    metadata:
      labels:
        app: fyp-sidekiq
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "kubernetes.io/arch"
                  operator: In
                  values:
                    - "arm64"
      containers:
        - name: sidekiq
          image: anonoz/fyp-webapp-arm64:8729331b653fb0577602afa8b2550544ca7ad9cd
          imagePullPolicy: "IfNotPresent"
          command:
            - bundle
            - exec
            - sidekiq
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "200Mi"
