kubernetes/dbow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fyp-dbow-classifier
  labels:
    app: fyp-dbow-classifier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fyp-dbow-classifier
  template:
    metadata:
      labels:
        app: fyp-dbow-classifier
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "kubernetes.io/arch"
                  operator: In
                  values:
                    - "arm64"
      containers:
        - name: dbow-classifier
          image: "anonoz/fyp-dbow:mock"
          imagePullPolicy: "IfNotPresent"
          ports:
          - containerPort: 6002
          livenessProbe:
            httpGet:
              path: /
              port: 6002
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: fyp-dbow-classifier
  labels:
    app: fyp-dbow-classifier
spec:
  selector:
    app: fyp-dbow-classifier
  ports:
    - name: dbow
      port: 6002
      protocol: TCP
