kubernetes/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fyp-webapp
  labels:
    app: fyp-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fyp-webapp
  template:
    metadata:
      labels:
        app: fyp-webapp
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "kubernetes.io/arch"
                  operator: In
                  values:
                    - "arm64"
      containers:
        - name: webapp
          image: "anonoz/fyp-webapp-arm64:a85022a204f7ed8d05d7b41e39b2b23f0bb604ec"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fyp-webapp
spec:
  selector:
    app: fyp-webapp
  ports:
    - name: rails
      port: 3000
      protocol: TCP
