kubernetes/ingress-default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jurong-redir
  labels:
    app: jurong-redir
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jurong-redir
  template:
    metadata:
      labels:
        app: jurong-redir
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "kubernetes.io/arch"
                  operator: In
                  values:
                    - "arm64"
      containers:
        - name: webapp
          image: "anonoz/redir-arm64:latest"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: jurong-redir
spec:
  selector:
    app: jurong-redir
  ports:
    - name: http
      port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend
spec:
  defaultBackend:
    service:
      name: jurong-redir
      port:
        number: 80
